--- a/screen4_css.html
+++ b/screen4_css.html
@@ -5,15 +5,29 @@
 -->
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Lubricants</title>
-  <meta name="description" content="CSS Assignment Advanced with screen4" />
-  
-  <link rel="stylesheet" type="text/css" href="normalize.css" />
+	<meta charset="UTF-8" />
+	<title>Lubricants</title>
+	<meta name="description" content="CSS Assignment Advanced with screen4" />
+  	<link rel="stylesheet" type="text/css" href="normalize.css" />
 	<link rel="stylesheet" type="text/css" href="screen4_css.css" />
 </head>
 
 <body>
+<div id="header">
+	<img src="logo.png" alt="logo" />
+	<p>CALL TOLL FREE 1-800-772-5823</P>
+	<ul>
+		<li><a href="">Home</a></li>
+		<li><a href="">Market Segments</a></li>
+		<li><a href="">Services</a></li>
+		<li><a href="">Products</a></li>
+		<li><a href="">Promotions</a></li>
+		<li><a href="">Market Area</a></li>
+		<li><a href="">Market Information</a></li>
+	</ul>
+</div>
 
+<div id="content">
+</div>
 </body>
 </html>
