--- a/screen4_css.html
+++ b/screen4_css.html
@@ -11,14 +11,13 @@
   	<link rel="stylesheet" type="text/css" href="normalize.css" />
 	<link rel="stylesheet" type="text/css" href="screen4_css.css" />
 </head>
-
 <body>
 <div id="header">
 	<img src="logo.png" alt="logo" />
 	<p>CALL TOLL FREE 1-800-772-5823</P>
 	<ul>
-		<li onclick="">Home</li>
-		<li onclick="">Market Segments</a></li>
+		<li onclick="window.open('home.html', '_blank');">Home</li>
+		<li onclick="window.open('http://www.yahoo.com', '_blank');">Market Segments</a></li>
 		<li onclick="">Services</a></li>
 		<li onclick="">Products</a></li>
 		<li onclick="">Promotions</a></li>
@@ -26,8 +25,36 @@
 		<li onclick="">Market Information</a></li>
 	</ul>
 </div>
-
 <div id="content">
+	<img src="main_pic.png" alt="main picture">
+	<div id="about_info">
+		<h5>About PPC Lubricants</h5>
+		<h5>A Heritage of Specializing in Lubricants</h5>
+		<p>For over 40 years, PPC Lubricants has earned a solid reputation for offering high quality products and services that improve your business. How? By providing customer retention programs/products for installers and products and services that increase equipment life and enhance the efficiency of all equipment whether it be Automotive, Heavy Duty Commercial, or Industrial in its application.</p>
+		<p>At PPC Lubricants, we take tremendous pride in providing the highest level of Service. When you call our toll free numbers you will be greeted by a staff that is knowledgeable and experienced in the various lubricants that we carry. Each customer service representative receives industry specific training on the latest advancements in lubrication technology including changing equipment and OEM requirements.</p>
+	</div>
+	<img src="logo.png" alt="logo">
+	<p>PPC now has Bulk Delivery/Squire Fill capabilities for DEF</p>
+	<div id="automotive">
+		<h5>Automotive</h5>
+		<p>The Automotive Market requires a different set of tools in order to succeed. PPC Lubricants offers various programs that are customized to each customer in...</p>
+		<div>Read More</div>
+	</div>
+	<div id="commerical">
+		<h5>Commerical</h5>
+		<p>PPC Lubricants has been in business of supporting the Commercial market for over 40 years! The most important thing that we have learned is that...</p>
+		<div>Read More</div>
+	</div>
+	<div id="industrial">
+		<h5>Industrial</h5>
+		<p>Regardless of the industrial market segment that you operate in: Metal, Forestry, Gos or Power Production, Foods, Plastics or almost any other field, your lubricant...</p>
+		<div>Read More</div>
+	</div>
+	<div id="diesel">
+		<h5>Diesel Exhaust Fluid</h5>
+		<p>As governmental regulations on emissions from diesel engines becomes more severe, it has forced vehicle manufacturers to evaulate and adopt new technologies in order to...</p>
+		<div>Read More</div>
+	</div>
 </div>
 </body>
 </html>
