--- a/screen4_css.html
+++ b/screen4_css.html
@@ -17,12 +17,12 @@
 	<p>CALL TOLL FREE 1-800-772-5823</P>
 	<ul>
 		<li onclick="window.open('home.html', '_blank');">Home</li>
-		<li onclick="window.open('http://www.yahoo.com', '_blank');">Market Segments</a></li>
-		<li onclick="">Services</a></li>
-		<li onclick="">Products</a></li>
-		<li onclick="">Promotions</a></li>
-		<li onclick="">Market Area</a></li>
-		<li onclick="">Market Information</a></li>
+		<li onclick="window.open('http://www.yahoo.com', '_blank');">Market Segments</li>
+		<li onclick="">Services</li>
+		<li onclick="">Products</li>
+		<li onclick="">Promotions</li>
+		<li onclick="">Market Area</li>
+		<li onclick="">Market Information</li>
 	</ul>
 </div>
 <div id="content">
@@ -38,22 +38,39 @@
 	<div id="automotive" class="articles">
 		<h5>Automotive</h5>
 		<p>The Automotive Market requires a different set of tools in order to succeed. PPC Lubricants offers various programs that are customized to each customer in...</p>
-		<div>Read More</div>
+		<svg width="300" height="200">
+			<polygon points="0,0 80,0 95,10 80,20 0,20" />
+			Sorry, your browser does not support inline SVG.
+		</svg>
+		<div onclick="window.open('http://www.yahoo.com', '_blank');">Read More...</div>
 	</div>
-	<div id="commerical" class="articles">
+	<div id="commercial" class="articles">
 		<h5>Commerical</h5>
 		<p>PPC Lubricants has been in business of supporting the Commercial market for over 40 years! The most important thing that we have learned is that...</p>
-		<div>Read More</div>
+		<svg width="300" height="200">
+			<polygon points="0,0 80,0 95,10 80,20 0,20" />
+			Sorry, your browser does not support inline SVG.
+		</svg>
+		<div onclick="window.open('http://www.yahoo.com', '_blank');">Read More...</div>
 	</div>
 	<div id="industrial" class="articles">
 		<h5>Industrial</h5>
 		<p>Regardless of the industrial market segment that you operate in: Metal, Forestry, Gos or Power Production, Foods, Plastics or almost any other field, your lubricant...</p>
-		<div>Read More</div>
+		<svg width="300" height="200">
+			<polygon points="0,0 80,0 95,10 80,20 0,20" />
+			Sorry, your browser does not support inline SVG.
+		</svg>
+		<div onclick="window.open('http://www.yahoo.com', '_blank');">Read More...</div>
+		
 	</div>
 	<div id="diesel" class="articles">
 		<h5>Diesel Exhaust Fluid</h5>
 		<p>As governmental regulations on emissions from diesel engines becomes more severe, it has forced vehicle manufacturers to evaulate and adopt new technologies in order to...</p>
-		<div>Read More</div>
+		<svg width="300" height="200">
+			<polygon points="0,0 80,0 95,10 80,20 0,20" />
+			Sorry, your browser does not support inline SVG.
+		</svg>
+		<div onclick="window.open('http://www.yahoo.com', '_blank');">Read More...</div>
 	</div>
 </div>
 </body>
