assignment completed, don't plan on merging this now

--- a/screen4_css2.html
+++ b/screen4_css2.html
@@ -3,7 +3,8 @@
   Date: 2/4/2015
   Assignment: Advanced, Screen 4.png, Lubricants
   ************************************************************
-  This version uses svg a tag that will not compatible with older browser versions, but has a more accurate button solution.
+  Additional file was used to produce a button within the articles.
+  read_more.jpg
 -->
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@
 	<title>Lubricants</title>
 	<meta name="description" content="CSS Assignment Advanced with screen4" />
   	<link rel="stylesheet" type="text/css" href="normalize.css" />
-	<link rel="stylesheet" type="text/css" href="screen4_css.css" />
+	<link rel="stylesheet" type="text/css" href="screen4_css2.css" />
 </head>
 <body>
 <div id="header">
@@ -40,38 +41,22 @@
 	<div id="automotive" class="articles">
 		<h5>Automotive</h5>
 		<p>The Automotive Market requires a different set of tools in order to succeed. PPC Lubricants offers various programs that are customized to each customer in...</p>
-		<svg width="300" height="200">
-			<polygon points="0,0 80,0 95,10 80,20 0,20" onclick="window.open('http://www.yahoo.com', '_blank');"/>
-			Sorry, your browser does not support inline SVG.
-		</svg>
-		<div>Read More...</div>
+		<div onclick="window.open('http://www.yahoo.com', '_blank');">Read More...</div>
 	</div>
 	<div id="commercial" class="articles">
 		<h5>Commerical</h5>
 		<p>PPC Lubricants has been in business of supporting the Commercial market for over 40 years! The most important thing that we have learned is that...</p>
-		<svg width="300" height="200">
-			<polygon points="0,0 80,0 95,10 80,20 0,20" onclick="window.open('http://www.yahoo.com', '_blank');"/>
-			Sorry, your browser does not support inline SVG.
-		</svg>
-		<div>Read More...</div>
+		<div onclick="window.open('http://www.yahoo.com', '_blank');">Read More...</div>
 	</div>
 	<div id="industrial" class="articles">
 		<h5>Industrial</h5>
 		<p>Regardless of the industrial market segment that you operate in: Metal, Forestry, Gos or Power Production, Foods, Plastics or almost any other field, your lubricant...</p>
-		<svg width="300" height="200">
-			<polygon points="0,0 80,0 95,10 80,20 0,20" onclick="window.open('http://www.yahoo.com', '_blank');"/>
-			Sorry, your browser does not support inline SVG.
-		</svg>
-		<div>Read More...</div>
+		<div onclick="window.open('http://www.yahoo.com', '_blank');">Read More...</div>
 	</div>
 	<div id="diesel" class="articles">
 		<h5>Diesel Exhaust Fluid</h5>
 		<p>As governmental regulations on emissions from diesel engines becomes more severe, it has forced vehicle manufacturers to evaulate and adopt new technologies in order to...</p>
-		<svg width="300" height="200">
-			<polygon points="0,0 80,0 95,10 80,20 0,20" onclick="window.open('http://www.yahoo.com', '_blank');"/>
-			Sorry, your browser does not support inline SVG.
-		</svg>
-		<div>Read More...</div>
+		<div onclick="window.open('http://www.yahoo.com', '_blank');">Read More...</div>
 	</div>
 </div>
 </body>
